Fix overflow scroll behaviour on table columns (#211)
* fix overflow scroll behaviour on table columns

* set grid-template-columns rules

* fix scroll to end button behaviour

* hypertable v1: remove scroll to end button

* ensure the columns take all available-space

* move on-bottom-reached modifier to the right container

* v2: ensure global container has position: relative set

* fix scroll-button-container positionning

* hypertable v2: remove scroll to end button for now

* linter fix

--- a/app/styles/hypertable.less
+++ b/app/styles/hypertable.less
@@ -10,11 +10,17 @@
 }
 
 .hypertable {
-  display: flex;
-  overflow-x: auto;
+  display: inline-grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr auto;
+  grid-template-areas: 'sticky content';
+  grid-auto-flow: column;
+
   height: 100%;
   scroll-behavior: smooth;
   background-color: white;
+  position: relative;
+  flex: 1;
 }
 
 .hypertable__state {
@@ -53,7 +59,7 @@
 .scroll-button-container {
   position: absolute;
   right: 13px;
-  top: calc(@cell-height - 13px);
+  top: 107px;
 
   z-index: 19;
   overflow-x: hidden;
@@ -75,9 +81,7 @@
 
     background-color: var(--color-gray-100);
 
-    transition:
-      transform 0.3s ease-in-out,
-      opacity 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     transform: translateX(100px);
     opacity: 0;
 
