--- a/app/styles/inner-table.less
+++ b/app/styles/inner-table.less
@@ -9,6 +9,7 @@
   overflow: auto;
   position: relative;
   z-index: 1;
+  display: flex;
 
   &.hypertable__table--v2 {
     height: 100%;
